--- a/index.html
+++ b/index.html
@@ -19,8 +19,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 
   <!-- Manifest -->
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="assets/logo192.png" />
+
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon_16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon_32x32.png" />
+
+  <meta name="msapplication-TileColor" content="#fa4300" />
+  <meta name="msapplication-TileImage" content="/assets/favicons/favicon_144x144.png" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/favicon_180x180.png" />
+
+  <link
+          rel="apple-touch-icon-precomposed"
+          sizes="180x180"
+          href="/assets/favicons/favicon_180x180.png"
+  />
+
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/favicon_192x192.png" />
+
+  <link rel="icon" type="image/png" sizes="194x194" href="/assets/favicons/favicon_194x194.png" />
+
+  <link rel="mask-icon" href="/assets/favicons/favicon_svg.svg" color="#EA530E" />
+
+  <link rel="icon" sizes="32x32 48x48" type="image/x-icon" href="/assets/favicons/favicon_ico.ico" />
+
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon_ico.ico" />
   <link rel="manifest" href="assets/manifest.json" />
 
   <!-- Add es-module-shims script -->
