--- a/index.html
+++ b/index.html
@@ -1,124 +1,207 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-  <meta charset="UTF-8" />
+    <!-- SEO -->
+    <meta name="description" content="Buy, sell and build androids online" />
+    <meta
+      name="keywords"
+      content="K-Scale Labs, Robot, Robots, Humanoid Robots, Droids, Androids, "
+    />
 
-  <!-- SEO -->
-  <meta name="description" content="Buy, sell and build androids online" />
-  <meta name="keywords" content="K-Scale Labs, Robot, Robots, Humanoid Robots, Droids, Androids, " />
+    <!-- View options -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
 
-  <!-- View options -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000000" />
+    <!-- Third-party stylesheets -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Third-party stylesheets -->
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <!-- Manifest -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicons/favicon_16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicons/favicon_32x32.png"
+    />
 
-  <!-- Manifest -->
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon_16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon_32x32.png" />
+    <meta name="msapplication-TileColor" content="#fa4300" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/favicons/favicon_144x144.png"
+    />
 
-  <meta name="msapplication-TileColor" content="#fa4300" />
-  <meta name="msapplication-TileImage" content="/assets/favicons/favicon_144x144.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicons/favicon_180x180.png"
+    />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/favicon_180x180.png" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="180x180"
+      href="/assets/favicons/favicon_180x180.png"
+    />
 
-  <link
-          rel="apple-touch-icon-precomposed"
-          sizes="180x180"
-          href="/assets/favicons/favicon_180x180.png"
-  />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/favicons/favicon_192x192.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/favicon_192x192.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="194x194"
+      href="/assets/favicons/favicon_194x194.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="194x194" href="/assets/favicons/favicon_194x194.png" />
+    <link
+      rel="mask-icon"
+      href="/assets/favicons/favicon_svg.svg"
+      color="#EA530E"
+    />
 
-  <link rel="mask-icon" href="/assets/favicons/favicon_svg.svg" color="#EA530E" />
+    <link
+      rel="icon"
+      sizes="32x32 48x48"
+      type="image/x-icon"
+      href="/assets/favicons/favicon_ico.ico"
+    />
 
-  <link rel="icon" sizes="32x32 48x48" type="image/x-icon" href="/assets/favicons/favicon_ico.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/assets/favicons/favicon_ico.ico"
+    />
 
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon_ico.ico" />
+    <!-- Add es-module-shims script -->
+    <script
+      async
+      src="https://ga.jspm.io/npm:es-module-shims@1.7.2/dist/es-module-shims.js"
+    ></script>
 
-  <!-- Add es-module-shims script -->
-  <script async src="https://ga.jspm.io/npm:es-module-shims@1.7.2/dist/es-module-shims.js"></script>
-
-  <!-- Add import map -->
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://cdn.jsdelivr.net/gh/kscalelabs/store-deps@master/dist/three/build/three.module.js"
+    <!-- Add import map -->
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/gh/kscalelabs/store-deps@master/dist/three/build/three.module.js"
+        }
       }
-    }
-  </script>
+    </script>
 
-  <!-- Tar Libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
+    <!-- Tar Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
 
-  <!-- Onnx Runtime -->
-  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@latest/dist/ort.min.js"></script>
+    <!-- Onnx Runtime -->
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@latest/dist/ort.min.js"></script>
 
-  <!-- WebRTC API -->
-  <script src="assets/gstwebrtc-api-2.0.0.min.js"></script>
+    <!-- WebRTC API -->
+    <script src="assets/gstwebrtc-api-2.0.0.min.js"></script>
 
-  <script>
-    const sprigConsent = localStorage.getItem('sprig-consent') === 'true';
-    const googleAnalyticsConsent = localStorage.getItem('google-analytics-consent') === 'true';
-    const pendoConsent = localStorage.getItem('pendo-consent') === 'true';
+    <script>
+      const sprigConsent = localStorage.getItem("sprig-consent") === "true";
+      const googleAnalyticsConsent =
+        localStorage.getItem("google-analytics-consent") === "true";
+      const pendoConsent = localStorage.getItem("pendo-consent") === "true";
 
-    if (googleAnalyticsConsent) {
-      (function () {
-        var gtagScript = document.createElement('script');
-        gtagScript.async = true;
-        gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-QG3C4SS5YY';
-        document.head.appendChild(gtagScript);
+      if (googleAnalyticsConsent) {
+        (function () {
+          var gtagScript = document.createElement("script");
+          gtagScript.async = true;
+          gtagScript.src =
+            "https://www.googletagmanager.com/gtag/js?id=G-QG3C4SS5YY";
+          document.head.appendChild(gtagScript);
 
-        gtagScript.onload = function () {
-          window.dataLayer = window.dataLayer || [];
-          function gtag() { dataLayer.push(arguments); }
-          gtag('js', new Date());
-          gtag('config', 'G-QG3C4SS5YY');
-        };
-      })();
-    }
+          gtagScript.onload = function () {
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+              dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-QG3C4SS5YY");
+          };
+        })();
+      }
 
-    if (sprigConsent) {
-      (function (l, e, a, p) {
-        if (window.Sprig) return;
-        window.Sprig = function () { S._queue.push(arguments) }
-        var S = window.Sprig; S.appId = 'bHT8PZvMNWLZ'; S._queue = [];
-        window.UserLeap = S;
-        a = l.createElement('script');
-        a.async = 1; a.src = e + '?id=' + S.appId;
-        p = l.getElementsByTagName('script')[0];
-        p.parentNode.insertBefore(a, p);
-      })(document, 'https://cdn.sprig.com/shim.js');
-    }
+      if (sprigConsent) {
+        (function (l, e, a, p) {
+          if (window.Sprig) return;
+          window.Sprig = function () {
+            S._queue.push(arguments);
+          };
+          var S = window.Sprig;
+          S.appId = "bHT8PZvMNWLZ";
+          S._queue = [];
+          window.UserLeap = S;
+          a = l.createElement("script");
+          a.async = 1;
+          a.src = e + "?id=" + S.appId;
+          p = l.getElementsByTagName("script")[0];
+          p.parentNode.insertBefore(a, p);
+        })(document, "https://cdn.sprig.com/shim.js");
+      }
 
-    if (pendoConsent) {
-      (function (apiKey) {
-        (function (p, e, n, d, o) {
-          var v, w, x, y, z; o = p[d] = p[d] || {}; o._q = o._q || [];
-          v = ['initialize', 'identify', 'updateOptions', 'pageLoad', 'track']; for (w = 0, x = v.length; w < x; ++w)(function (m) {
-            o[m] = o[m] || function () { o._q[m === v[0] ? 'unshift' : 'push']([m].concat([].slice.call(arguments, 0))); };
-          })(v[w]);
-          y = e.createElement(n); y.async = !0; y.src = 'https://cdn.pendo.io/agent/static/' + apiKey + '/pendo.js';
-          z = e.getElementsByTagName(n)[0]; z.parentNode.insertBefore(y, z);
-        })(window, document, 'script', 'pendo');
-      })('7664f162-0994-4d9f-7c5c-fd6e279743b9');
-    }
-  </script>
+      if (pendoConsent) {
+        (function (apiKey) {
+          (function (p, e, n, d, o) {
+            var v, w, x, y, z;
+            o = p[d] = p[d] || {};
+            o._q = o._q || [];
+            v = [
+              "initialize",
+              "identify",
+              "updateOptions",
+              "pageLoad",
+              "track",
+            ];
+            for (w = 0, x = v.length; w < x; ++w)
+              (function (m) {
+                o[m] =
+                  o[m] ||
+                  function () {
+                    o._q[m === v[0] ? "unshift" : "push"](
+                      [m].concat([].slice.call(arguments, 0)),
+                    );
+                  };
+              })(v[w]);
+            y = e.createElement(n);
+            y.async = !0;
+            y.src = "https://cdn.pendo.io/agent/static/" + apiKey + "/pendo.js";
+            z = e.getElementsByTagName(n)[0];
+            z.parentNode.insertBefore(y, z);
+          })(window, document, "script", "pendo");
+        })("7664f162-0994-4d9f-7c5c-fd6e279743b9");
+      }
+    </script>
 
+    <title>K-Scale</title>
+  </head>
 
-  <title>K-Scale</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="src/index.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="src/index.tsx"></script>
+  </body>
 </html>
